--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.1.0",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-text-loop": "^2.3.0",
